# core-mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/ai_contained/core/mcp/: __init__.py  testing.py
tests/: conftest.py  test_elicitor.py  test_load_providers.py
