[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-contained-core-mcp"
version = "0.1.0"
description = "Base MCP server with plugin auto-discovery for AI-Contained"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.2.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_contained"]
