[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-contained-core-mcp"
version = "0.0.2"
description = "Base MCP server with plugin auto-discovery for AI-Contained"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-describe>=3.1",
    "assertpy>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "focus: run only focused tests (use with -m focus)",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_contained"]
